--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
         <div class="container">
           <div class="row justify-content-between align-items-center">
-            <div class="col-lg-6  ">
+            <div class="col-lg-6  col-sm-8">
               
                 
               <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
